--- a/matminProject/src/main/java/db/driver/driver.properties
+++ b/matminProject/src/main/java/db/driver/driver.properties
@@ -1,5 +1,5 @@
 driver=oracle.jdbc.driver.OracleDriver
 
 url=jdbc:oracle:thin:@localhost:1521:xe
-username=SEMI
-password=semi
+username=ssemi
+password=ssemi
