--- a/matminProject/src/main/java/db/driver/driver.properties
+++ b/matminProject/src/main/java/db/driver/driver.properties
@@ -1,6 +1,4 @@
 driver=oracle.jdbc.driver.OracleDriver
-<<<<<<< HEAD
-
-url=jdbc:oracle:thin:@localhost:1521:xe
-username=ssemi
-password=ssemi
+url=jdbc:oracle:thin:@192.168.20.27:1521:xe
+username=semi
+password=semi
