--- a/matminProject/src/main/java/db/driver/driver.properties
+++ b/matminProject/src/main/java/db/driver/driver.properties
@@ -1,4 +1,5 @@
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@192.168.20.27:1521:xe
-username=semi
-password=semi
+url=jdbc:oracle:thin:@localhost:1521:xe
+username=SSEMI
+password=SSEMI
+
